# uoh-ay26-final-project

./: .env-example  .gitignore  ProgressDoc.md  README.md  pyproject.toml  sample_match_log.json
config/: game.json  setup.json
config/cop/: game.toml
config/thief/: game.toml
docs/: PLAN.md  PRD.md  PRD_board_physics.md  PRD_commit_reveal_crypto.md  PRD_fastmcp_networking.md  PRD_gmail_gatekeeper.md  PRD_gui_replay.md  PRD_interactive_play.md  PRD_pheromone_scent.md  PRD_reliability_layer.md  PRD_strategy_module.md  TODO.md  tasks.md
src/police_thief/: __init__.py  __main__.py  main.py
src/police_thief/domain/: __init__.py  belief.py  board.py  capture.py  dec_pomdp.py  heuristics.py  hints.py  interactive_match.py  league.py  live_view_model.py  replay.py  scent.py  scoring.py  simulation.py
src/police_thief/domain/strategy/: __init__.py  brain_base.py  manhattan_brain.py
src/police_thief/gui/: __init__.py  board_canvas.py  live_gui.py  mode_select.py  play_app.py  replay_gui.py  theme.py
src/police_thief/services/: __init__.py  anomaly_detector.py  commit_reveal.py  deadline_tracker.py  gatekeeper.py  gemini_agent.py  gmail_oauth.py  gmail_report_sender.py  log_manager.py  match_reports.py  mcp_client.py  mcp_server.py  orchestrator.py  quota_manager.py  state_machine.py  step0.py  token_bucket.py  watchdog.py
src/police_thief/shared/: __init__.py  config.py  constants.py  game_config.py  version.py
tests/integration/: test_gui_pipeline.py  test_mcp_http_roundtrip.py  test_orchestrator.py  test_scent_trail.py  test_simulation.py  test_strategy_pipeline.py
tests/unit/: conftest.py  test_anomaly_detector.py  test_belief.py  test_board.py  test_board_canvas.py  test_capture.py  test_commit_reveal.py  test_config.py  test_config_fingerprint.py  test_deadline_tracker.py  test_dec_pomdp.py  test_game_config.py  test_gatekeeper.py  test_gemini_agent.py  test_gmail_oauth.py  test_gmail_report_sender.py  test_gui.py  test_heuristics.py  test_hints.py  test_interactive_match.py  test_league.py  test_live_view_model.py  test_log_manager.py  test_match_reports.py  test_mcp_client.py  test_mcp_server.py  test_mode_select.py  test_play_app.py  test_quota_manager.py  test_replay.py  test_scent.py  test_scoring.py  test_state_machine.py  test_step0.py  test_strategy.py  test_token_bucket.py  test_version.py  test_watchdog.py
