[project]
name = "police-thief"
version = "1.0.0"
description = "Distributed Cops-and-Robbers over a Peer-to-Peer Network — Orchestration of AI Agents course project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4.4",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
email = [
    "google-api-python-client>=2.130.0",
    "google-auth-oauthlib>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/police_thief"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/police_thief/main.py",
    "src/police_thief/__main__.py",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 85
